# openrail

./: .gitignore  .pre-commit-config.yaml  COPYING  Makefile  README.md  import_designs.py  pyproject.toml  run.bash
.github/workflows/: main.yml  python-package.yml
designs/k1g8x8y4io10ic4c6l/asap7/: Makefile  common.mk  common_sub.mk  config.mk  constraint.sdc  io.tcl  pdn.tcl
designs/k1g8x8y4io10ic4c6l/asap7/IOEastTileWrapper/: config.mk  constraint.sdc  io.tcl
designs/k1g8x8y4io10ic4c6l/asap7/IONorthTileWrapper/: config.mk  constraint.sdc  io.tcl
designs/k1g8x8y4io10ic4c6l/asap7/IOSouthTileWrapper/: config.mk  constraint.sdc  io.tcl
designs/k1g8x8y4io10ic4c6l/asap7/IOTile/: Makefile  config.mk  constraint.sdc
designs/k1g8x8y4io10ic4c6l/asap7/IOTileWrapper/: Makefile  config.mk  (+1 more)
designs/k1g8x8y4io10ic4c6l/devboard/: .gitignore  devboard.xpr
designs/k1g8x8y4io10ic4c6l/rtl/: IOColumn.v  IOEastTileWrapper.v  IOLine.v  IONorthTileWrapper.v  IOSouthTileWrapper.v  IOTile.v  IOTileWrapper.v  IOWestTileWrapper.v  LogicColumn.v  LogicElement.v  LogicGrid.v  LogicTile.v  LogicTileWrapper.v  LookUpTable.v  Multiplexer.v  MultiplexerIOIC.v  MultiplexerIOIO.v  MultiplexerLUT.v  MultiplexerSBIC.v  MultiplexerSBLE.v  SwitchBox.v  helpers.inc.v  kFPGACore.v  kFPGACoreWrapper.v
designs/nangate45/raven-picorv32/: config.mk
designs/sky130hd/raven-picorv32/: config.mk  constraint.sdc
designs/sky130hs/raven-picorv32/: config.mk  constraint.sdc
openrail/: __init__.py  __main__.py  cmd.py  design.py  impl.py  platform.py
tests/autoflow_adder/: Adder.v  run.sh
(+19 files in other folders)
