[project]
name = "OpenRAIL"
version = "0.0.1"
dependencies = ["tomlkit"]
description = "Automatation of OpenROAD flows"
authors = [
    { name = "Jonathan Tremesaygues", email = "jonathan.tremesaygues@slaanesh.org" },
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.scripts]
openrail = "openrail:main"


[tool.black]
profile = "black"
line-length = 79


[tool.isort]
profile = "black"


[tool.setuptools]
packages = ["openrail"]
